--- a/isTriangle.html
+++ b/isTriangle.html
@@ -16,6 +16,7 @@
    <label for="angle3"> angle3</label>
    <input type="number" class="angle-input"></input>
   <button id="check-button"> tell me!</button>
+  <div id="display-message"></div>
 </body>
 <script src="isTrianlge.js"></script>
 </html>
