--- a/area.html
+++ b/area.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
@@ -13,5 +13,7 @@
     <label for= "height-length"> height:</label>
     <input type ="number" id="height-length"></input>
     <button id="check-button">Check</button>
+    <div id="display-message"></div>
 </body> 
+<script src ="area.js"></script>
 </html>
