created: quiz.js

--- a/quiz.html
+++ b/quiz.html
@@ -19,9 +19,11 @@
         <div class="question-container">
             <label><input type="radio" name="question2" value="acute"/> acute</label>
             <lavel ><input type="radio" name="question2" value="obtuse"/>obtuse</label>
-            <label><input type="radio" name="question2" value="right angled"/>right angled</label>
+            <label><input type="radio" name="question2" value="right angle"/>right angled</label>
         </div>
     </form>
+    <button id="check-button">check</button>
+    <div id="display-message"></div>
 
 </body>
 <script src="quiz.js"></script>
