--- a/area.html
+++ b/area.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <h1> calculate the area</h1>
+    <div class="container">
+
     <label for ="base-length">base:</label>
     <input type="number" id="base-length"></input>
     <label for= "height-length"> height:</label>
     <input type ="number" id="height-length"></input>
     <button id="check-button">Check</button>
+    </div>
     <div id="display-message"></div>
 </body> 
 <script src ="area.js"></script>
