--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1> hypotenuse</h1>
-    <label for=""> a</label>
+    <h1>Check Hypotenuse</h1>
+    
+    <div class="container">
+    <label for=""> a =</label>
     <input type="number" class="side-length"></input>
-    <label for=""> b</label>
+    <label for=""> b =</label>
     <input type="number" class ="side-length"></input>
     <button id="check-button">check</button>
+</div>
+
     <div id="display-message"></div>
     
 </body>
