--- a/isTriangle.html
+++ b/isTriangle.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
    <h1>Is triangle ?</h1>
+   <div class="container">
+
    <label for=""> angle1 </label>
    <input type="number" class="angle-input"></input>
    <label for="angle2">angle2</label>
@@ -16,6 +19,7 @@
    <label for="angle3"> angle3</label>
    <input type="number" class="angle-input"></input>
   <button id="check-button"> tell me!</button>
+  </div>
   <div id="display-message"></div>
 </body>
 <script src="isTrianlge.js"></script>
