--- a/quiz.html
+++ b/quiz.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <h1> triangle quiz</h1>
+
+
     <form class="quiz-form">
 
         <div class="question-container">
@@ -23,6 +26,7 @@
         </div>
     </form>
     <button id="check-button">check</button>
+    
     <div id="display-message"></div>
 
 </body>
