--- a/area.html
+++ b/area.html
@@ -8,12 +8,20 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> calculate the area</h1>
-    <div class="container">
+    <nav>
+        <a href="index.html">Is Triangle?</a>
+        <a href="quiz.html" >Quiz</a>
+        <a href="hypotenuse.html">Hypotenuse</a>
+        <a href="area.html" class="item-active">Area</a>
+      </nav>
+    <h1> Calculate the area of the triangle</h1>
+   <h2 class="formula">Area of a triangle = 1/2(Base * Height)</h2>
 
-    <label for ="base-length">base:</label>
+    <div class="input-container container">
+
+    <label for ="base-length">base(in cm):</label>
     <input type="number" id="base-length"></input>
-    <label for= "height-length"> height:</label>
+    <label for= "height-length"> height(in cm):</label>
     <input type ="number" id="height-length"></input>
     <button id="check-button">Check</button>
     </div>
