--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -8,15 +8,24 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Is Triangle?</a>
+        <a href="quiz.html" >Quiz</a>
+        <a href="hypotenuse.html"class="item-active">Hypotenuse</a>
+        <a href="area.html">Area</a>
+      </nav>
     <h1>Check Hypotenuse</h1>
+    <h2 class="formula">Length of Hypotenuse = sqrt(a^2+b^2)</h2>
     
-    <div class="container">
+    <div class="input-container container">
     <label for=""> a =</label>
     <input type="number" class="side-length"></input>
     <label for=""> b =</label>
     <input type="number" class ="side-length"></input>
     <button id="check-button">check</button>
 </div>
+
+</body>
 
     <div id="display-message"></div>
     
