--- a/quiz.html
+++ b/quiz.html
@@ -8,18 +8,34 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Is Triangle?</a>
+        <a href="quiz.html" class="item-active">Quiz</a>
+        <a href="hypotenuse.html">Hypotenuse</a>
+        <a href="area.html">Area</a>
+      </nav>
     <h1> triangle quiz</h1>
 
 
     <form class="quiz-form">
 
         <div class="question-container">
-            <label ><input type="radio" name="question1" value="45"/>45</label>
+            <p>
+                What is the third angle for the triangle where angle1 = 45° and angle2
+                = 45°?
+            </p>
+            <label>
+                <input type="radio" name="question1" value="45"/>45
+            </label>
             <label><input type="radio" name="question1" value="60"/>60</label>
             <label><input type="radio" name="question1" value="90"/>90</label>
          
         </div>
         <div class="question-container">
+            <p>
+                What is the third angle for the triangle where angle1 = 45° and angle2
+                = 45°?
+            </p>
             <label><input type="radio" name="question2" value="acute"/> acute</label>
             <lavel ><input type="radio" name="question2" value="obtuse"/>obtuse</label>
             <label><input type="radio" name="question2" value="right angle"/>right angled</label>
