--- a/quiz.html
+++ b/quiz.html
@@ -38,7 +38,7 @@
             </p>
             <label><input type="radio" name="question2" value="acute"/> acute</label>
             <lavel ><input type="radio" name="question2" value="obtuse"/>obtuse</label>
-            <label><input type="radio" name="question2" value="right angle"/>right angled</label>
+            <label><input type="radio" name="question2" value="rightAngled"/>right angled</label>
         </div>
     </form>
     <button id="check-button">check</button>
