--- a/quiz.html
+++ b/quiz.html
@@ -25,10 +25,10 @@
                 = 45°?
             </p>
             <label>
-                <input type="radio" name="question1" value="45"/>45
+                <input type="radio" name="question1" value="45" required ="required">45
             </label>
-            <label><input type="radio" name="question1" value="60"/>60</label>
-            <label><input type="radio" name="question1" value="90"/>90</label>
+            <label><input type="radio" name="question1" value="60" required ="required">60</label>
+            <label><input type="radio" name="question1" value="90" required ="required">90</label>
          
         </div>
         <div class="question-container">
@@ -36,9 +36,9 @@
                 What is the third angle for the triangle where angle1 = 45° and angle2
                 = 45°?
             </p>
-            <label><input type="radio" name="question2" value="acute"/> acute</label>
-            <lavel ><input type="radio" name="question2" value="obtuse"/>obtuse</label>
-            <label><input type="radio" name="question2" value="rightAngled"/>right angled</label>
+            <label><input type="radio" name="question2" value="acute" required ="required"> acute</label>
+            <lavel ><input type="radio" name="question2" value="obtuse" required ="required">obtuse</label>
+            <label><input type="radio" name="question2" value="rightAngled"required ="required">right angled</label>
         </div>
     </form>
     <button id="check-button">check</button>
