fix: negative values

--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -19,16 +19,17 @@
     
     <div class="input-container container">
     <label for=""> a =</label>
-    <input type="number" class="side-length"></input>
+    <input min="0" type="number" class="side-length"></input>
     <label for=""> b =</label>
-    <input type="number" class ="side-length"></input>
+    <input min="0" type="number" class ="side-length"></input>
     <button id="check-button">check</button>
 </div>
 
-</body>
+
 
     <div id="display-message"></div>
     
-</body>
+
 <script src="hypotenuse.js"></script>
+</body>
 </html>
