--- a/area.html
+++ b/area.html
@@ -20,9 +20,9 @@
     <div class="input-container container">
 
     <label for ="base-length">base(in cm):</label>
-    <input type="number" id="base-length"></input>
+    <input min ="0" type="number" id="base-length"></input>
     <label for= "height-length"> height(in cm):</label>
-    <input type ="number" id="height-length"></input>
+    <input min ="0" type ="number" id="height-length"></input>
     <button id="check-button">Check</button>
     </div>
     <div id="display-message"></div>
