--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
    <div class="input-container container">
 
    <label for=""> angle1 </label>
-   <input type="number" class="angle-input"></input>
+   <input min="0" type="number" class="angle-input"></input>
    <label for="angle2">angle2</label>
-   <input type="number" class="angle-input"></input>
+   <input min="0" type="number" class="angle-input"></input>
 
    <label for="angle3"> angle3</label>
-   <input type="number" class="angle-input"></input>
+   <input min ="0" type="number" class="angle-input"></input>
   <button id="check-button"> tell me!</button>
   </div>
   <div id="display-message"></div>
